--- a/package.json
+++ b/package.json
@@ -12,9 +12,17 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@types/node": "^18.11.17",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-vue": "^9.8.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
+    "vue-eslint-parser": "^9.1.0",
     "vue-tsc": "^1.0.11"
   }
 }
