fix: remove React support from eslint airbnb

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,8 +7,8 @@
     "extraFileExtensions": [".vue"]
   },
   "extends": [
-    "airbnb",
-    "airbnb-typescript"
+    "airbnb-base",
+    "airbnb-typescript/base"
   ],
   "plugins": [
     "vue",
