--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,10 @@
   "parserOptions": {
     "parser": "@typescript-eslint/parser",
     "sourceType": "module",
-    "project": "./tsconfig.json",
+    "project": [
+      "./tsconfig.json",
+      "./electron/tsconfig.json"
+    ],
     "extraFileExtensions": [".vue"]
   },
   "extends": [
@@ -28,6 +31,7 @@
     "import/no-cycle": "off",
     "import/prefer-default-export": "off",
     "import/no-unresolved": "off",
+    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
     "@typescript-eslint/comma-dangle": "off",
     "@typescript-eslint/default-param-last": "off",
     "@typescript-eslint/no-inferrable-types": "off",
