--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "todo-manager-vue",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "main": "./dist/main.js",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc && vite build && tsc -p ./electron/tsconfig.json",
     "preview": "vite preview",
     "prepare": "husky install"
   },
@@ -22,6 +22,7 @@
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "electron": "^22.0.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
@@ -30,6 +31,7 @@
     "lint-staged": "^13.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
+    "vite-plugin-electron-renderer": "^0.11.3",
     "vue-eslint-parser": "^9.1.0",
     "vue-tsc": "^1.0.11"
   }
