chore: remove dotenv files

--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,10 @@ lerna-debug.log*
 node_modules
 dist
 dist-ssr
+dist-electron
 *.local
 .env
+release-builds
 
 # Editor directories and files
 .vscode/*
