--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "name": "todo-manager-vue",
   "private": true,
   "version": "0.0.0",
-  "main": "./dist/main.js",
+  "main": "dist-electron/main/index.js",
   "scripts": {
     "dev": "vite",
-    "start": "cross-env PROD=1 && electron .",
-    "build": "npm run build:renderer && npm run build:electron",
-    "build:renderer": "vite build",
-    "build:electron": "tsc -p ./electron/tsconfig.json",
+    "build": "vue-tsc --noEmit && vite build && electron-builder",
     "preview": "vite preview",
     "prepare": "husky install"
   },
@@ -25,9 +22,8 @@
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "@vitejs/plugin-vue": "^4.0.0",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.0.3",
     "electron": "^22.0.0",
+    "electron-builder": "^23.6.0",
     "eslint": "^8.30.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -36,7 +32,8 @@
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0",
+    "vite": "^4.0.3",
+    "vite-plugin-electron": "^0.11.1",
     "vite-plugin-electron-renderer": "^0.11.3",
     "vue-eslint-parser": "^9.1.0",
     "vue-tsc": "^1.0.11"
