--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     ]
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
