--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     ]
   },
   "dependencies": {
+    "pinia": "^2.0.28",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6",
-    "vuex": "^4.1.0"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
