--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,11 @@
     "import/prefer-default-export": "off",
     "import/no-unresolved": "off",
     "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "import/extensions": ["error", {
+        "js": "never",
+        "ts": "never",
+        "vue": "always"
+    }],
     "@typescript-eslint/comma-dangle": "off",
     "@typescript-eslint/default-param-last": "off",
     "@typescript-eslint/no-inferrable-types": "off",
