--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     ]
   },
   "dependencies": {
+    "peerjs": "^1.4.7",
     "pinia": "^2.0.28",
     "pinia-plugin-persistedstate": "^3.0.2",
+    "punycode": "^2.2.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
+    "@types/punycode": "^2.1.0",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "@vitejs/plugin-vue": "^4.0.0",
